deployment-prod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-app
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce
  template:
    metadata:
      labels:
        app: ecommerce
    spec:
      containers:
        - name: ecommerce-container
          image: mdarker999/sigida-app:latest
          ports:
            - containerPort: 8000
