deployment-staging.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-app
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce
  template:
    metadata:
      labels:
        app: ecommerce
    spec:
      containers:
        - name: ecommerce-container
          image: mdarker999/sigida-app:latest
          ports:
            - containerPort: 8000
